--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ h3 {
 
 h4 {
     color: #4e4e4e;
-    font-size: 1.25em;
+    font-size: 1.5em;
     font-weight: normal;
     margin-top: 0;
 }
@@ -87,7 +87,6 @@ h4 {
 }
 
 p {
-    font-family: 'Open Sans';
     font-size: 1.5em;
 }
 
@@ -104,13 +103,11 @@ blockquote {
     margin: 2em 10px;
     padding: 1em 10px;
     border-left: 10px solid #edf0f5;
-    font-family: 'Open Sans';
     font-size: 1.5em;
 }
 
 blockquote .name {
     font-weight: bold;
-    font-family: "Montserrat";
 }
 
 .responsive-show {
@@ -120,6 +117,10 @@ blockquote .name {
 /**/
 ul {
     margin-top: -10px;
+}
+
+li {
+    /*font-size: 1.2em;*/
 }
 
 div#left {
